--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,8 @@ const exampleImgs = [
 ];
 const pageTitle = 'AI Background Remover';
 const secondTitle = 'Free, Batch, No Login, No Quality Loss';
-const title = 'Free AI Background Remover. No Signup, No Quality Loss - BgGone';
+const title =
+  'Free AI Background Remover. Free, Batch, No Login, No Quality Loss - BgGone';
 
 const entry = await getEntry('content', 'index');
 const { Content } = await render(entry!);
