--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -72,5 +72,19 @@ const description =
 
       gtag('config', 'G-CZS9K7V64W');
     </script>
+    <script>
+      const params = new URLSearchParams(window.location.search);
+
+      const isDebug = !!params.get('debug');
+      if (
+        (import.meta.env.DEV || isDebug) &&
+        /mobile/i.test(navigator.userAgent)
+      ) {
+        const script = document.createElement('script');
+        script.src = 'https://cdn.jsdelivr.net/npm/eruda';
+        script.onload = () => eruda.init();
+        document.body.appendChild(script);
+      }
+    </script>
   </body>
 </html>
