--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -61,8 +61,10 @@ const description =
     </main>
     <Footer />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZS9K7V64W"
-    ></script>
+    <script
+      is:inline
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CZS9K7V64W"></script>
     <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
