--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,7 +12,7 @@
   <img
     class="w-8 h-8"
     src="/favicon_48x48.png"
-    alt="AI Background Remover Logo"
+    alt="BgGone - Free AI Background Remover"
   />
   <a class="mx-4" href="/">BgGone</a>
   <!-- <div class="hidden sm:block">
