--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const exampleImgs = [
 const pageTitle = 'AI Background Remover';
 const secondTitle = 'Free, Batch, No Login, No Quality Loss';
 const title =
-  'Free AI Background Remover. Free, Batch, No Login, No Quality Loss - BgGone';
+  'BgGone - Free AI Background Remover. Free, Batch, No Login, No Quality Loss';
 
 const entry = await getEntry('content', 'index');
 const { Content } = await render(entry!);
