--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,23 +10,12 @@ const description =
 
 <html lang="en" class="font-display text-[16px]">
   <head>
+    <title>{title}</title>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/favicon_32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/favicon_48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/png" href="/favicon_96x96.png" sizes="96x96" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/favicon_114x114.png"
-      sizes="114x114"
-    />
-    <link rel="apple-touch-icon" href="/logo.png" />
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,viewport-fit=cover"
     />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
     <meta name="description" content={description} />
     <meta
       name="keywords"
@@ -46,6 +35,18 @@ const description =
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content="https://bgg.one/bg-gone.jpg" />
+
+    <link rel="icon" type="image/png" href="/favicon_32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/favicon_48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/png" href="/favicon_96x96.png" sizes="96x96" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon_114x114.png"
+      sizes="114x114"
+    />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
 
     <script type="application/ld+json">
       {
@@ -76,28 +77,6 @@ const description =
       is:inline
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-CZS9K7V64W"></script>
-    <script is:inline>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-CZS9K7V64W');
-    </script>
-    <script is:inline>
-      const params = new URLSearchParams(window.location.search);
-
-      const isDebug = !!params.get('debug');
-      if (
-        (isDebug || window.location.protocol !== 'https:') &&
-        /mobile/i.test(navigator.userAgent)
-      ) {
-        const script = document.createElement('script');
-        script.src = '/eruda.js';
-        script.onload = () => eruda.init();
-        document.body.appendChild(script);
-      }
-    </script>
+    <script src="../scripts/do.js"></script>
   </body>
 </html>
