--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ const { Content } = await render(entry!);
 const pageTitle = 'About AI Background Remover';
 const secondTitle = 'Free, Batch, No Login, No Quality Loss';
 const title =
-  'About | Free AI Background Remover. Free, Batch, No Login, No Quality Loss - BgGone';
+  'About BgGone - Free AI Background Remover. Free, Batch, No Login, No Quality Loss';
 ---
 
 <BaseLayout pageTitle={pageTitle} title={title}>
