--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,7 +68,7 @@ const description =
         {secondTitle}
       </p>
     </h1>
-    <main class="mx-auto sm:w-lg md:w-xl lg:w-2xl xl:w-3xl 2xl:w-4xl">
+    <main >
       <slot />
     </main>
     <Footer />
