--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,11 @@ import eagle from '../images/eagle.jpg';
 import love from '../images/love.jpg';
 import motorcycle from '../images/motorcycle.jpg';
 const exampleImgs = [
-  { src: car, alt: 'Car | ai background remover - BgGone' },
-  { src: dog, alt: 'Pet | ai background removal - BgGone' },
-  { src: eagle, alt: 'Animal | ai remove background - BgGone' },
-  { src: love, alt: 'People | ai remove the background of people - BgGone' },
-  { src: motorcycle, alt: 'Sports | ai remove bg - BgGone' },
+  { src: car, alt: 'Car | AI Background Remover - BgGone' },
+  { src: dog, alt: 'Pet | AI Background Removal - BgGone' },
+  { src: eagle, alt: 'Animal | AI Remove Background - BgGone' },
+  { src: love, alt: 'People | AI Remove the Background of people - BgGone' },
+  { src: motorcycle, alt: 'Sports | AI Remove Bg - BgGone' },
 ];
 const pageTitle = 'AI Background Remover';
 const secondTitle = 'Free, Batch, No Login, No Quality Loss';
@@ -38,7 +38,7 @@ const { Content } = await render(entry!);
     }
   </SelectImage>
 
-  <div class="mt-12 px-4">
+  <div class="mt-12 px-4 main-width">
     <Prose>
       <Content />
     </Prose>
