feat: dark mode

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -58,7 +58,7 @@ const description =
       }
     </script>
   </head>
-  <body class="px-4">
+  <body class="px-4 text-gray-950 dark:bg-gray-950 dark:text-white">
     <Header />
     <h1
       class="text-center py-8 sm:py-8 text-3xl font-bold sm:text-4xl md:text-5xl lg:text-6xl"
@@ -68,7 +68,7 @@ const description =
         {secondTitle}
       </p>
     </h1>
-    <main >
+    <main>
       <slot />
     </main>
     <Footer />
