--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,16 @@
 ---
 // import Hamburger from './Hamburger.astro';
 import Navigation from './Navigation.astro';
-// import ThemeIcon from './ThemeIcon.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 <header>
-  <nav class="flex justify-between items-center h-18 border-b border-gray-200">
+  <nav
+    class="flex justify-between items-center h-18 border-b border-gray-950/5 dark:border-white/10"
+  >
     <Navigation />
     <!-- <Hamburger /> -->
 
-    <!-- <ThemeIcon /> -->
+    <ThemeIcon />
   </nav>
 </header>
