--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@
 // ];
 ---
 
-<div class="flex items-center text-xl text-black">
+<div class="flex items-center text-xl">
   <img
     class="w-8 h-8"
     src="/favicon_48x48.png"
